Fixes rollover issues and cleans up some spacing.

--- a/src/packages/modules/country-region-selection-z10/css/country-region-selection-flags.scss
+++ b/src/packages/modules/country-region-selection-z10/css/country-region-selection-flags.scss
@@ -1,4 +1,4 @@
-.icon-flag{display:block; background-image:url('../../img/country-region-selection-z10/flags.png');background-repeat:no-repeat}
+.icon-flag{display:block; background-image:url('../../img/country-region-selection-z10/flags.png');background-repeat:no-repeat;margin-bottom: 2px;}
 .icon-flag-zimbabwe{background-position:0px 0px;width:20px;height:14px;}
 .icon-flag-zambia{background-position:-20px 0px;width:20px;height:14px;}
 .icon-flag-yemen{background-position:0px -14px;width:20px;height:14px;}
